<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="80dp"
            android:layout_height="330dp"
            android:layout_margin="5dp"
            android:textSize="34sp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/list_todo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_data_bak_menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_bak1"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />
            <TextView
                android:id="@+id/tv_data_sp_menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_special1"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_data_sp_menu_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_special2"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />
            <TextView
                android:id="@+id/tv_data_dup_menu_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_rice1"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_data_dup_menu_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_rice2"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_data_dup_menu_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_rice3"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_data_dup_menu_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_rice4"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />


            <TextView
                android:id="@+id/tv_data_bak_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_bak_sell"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />


            <TextView
                android:id="@+id/tv_data_dup_tickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_rice_Sell"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_foodwaste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_trash"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_day"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list_date"
                android:layout_margin="5dp"
                android:textSize="34sp"

                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>