<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F1E9"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/main_icon"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/img_todo"
        android:scaleType="centerInside"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_J"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/log_in_J"
        style="@style/Widget.AppCompat.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/font"
        android:text="@string/log_logo"
        android:textColor="#100F0F"
        android:textColorHint="#270E0E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:backgroundTint="#10C300"
        android:fontFamily="@font/nomalf"
        android:text="@string/log_b_reg"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.125" />

    <TextView
        android:id="@+id/log_in_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_t"
        android:textColor="#0C0C0C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:autofillHints="id"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/baseline_person_24"
        android:ems="10"
        android:hint="@string/log_hint_t"
        android:inputType="textEmailAddress"
        android:textColor="#121111"
        android:textColorHint="#867E7E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_icon" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#10C300"
        android:fontFamily="@font/nomalf"
        android:text="@string/log_b_log"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_pwd"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="329dp"
        android:layout_height="48dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/baseline_lock_24"
        android:ems="10"
        android:hint="@string/log_ps_T"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#867E7E"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/et_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />


</androidx.constraintlayout.widget.ConstraintLayout>
